# django-products-core

./: .pre-commit-config.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
products_core/: apps.py  factories.py  factory.py  models.py  tests.py
tests/: factories.py  factory.py  models.py  test_models.py  test_settings.py  tests_module.py
